# kovi-check-long

./: .gitignore  Cargo.toml  README.md  lib.rs  看我看我.txt
check-alllong/src/: detector.rs  lib.rs
plugins/check-alllong/: Cargo.toml
plugins/check-alllong/src/: detector.rs  lib.rs
src/: main.rs
