[package]
edition = "2021"
name = "check-alllong"
version = "0.1.0"

[dependencies]
image = "0.25"
kovi-plugin-expand-napcat = "0.0.2"
kovi.workspace = true
ndarray = "0.16"
ort = "=2.0.0-rc.6"
raqote = {version = "0.8", default-features = false}
reqwest = "0.12"
serde = "1.0.210"
tracing = "0.1"
tracing-subscriber = {version = "0.3", default-features = false, features = [
  "env-filter",
  "fmt",
]}
ureq = "2.1"
